# agent_adda

./: .env.example  .gitignore  AGENTS.md  README.md  architecture.md  package-lock.json  package.json  playwright.config.ts
backend/: Cargo.toml  Rocket.toml
backend/migrations/: 0001_postgres_schema.sql  0002_agent_cron_schedules.sql  0003_agent_global_system_prompt.sql  0004_remove_channel_loop_setting.sql  0005_prune_deprecated_settings.sql
backend/src/: agent_communications.rs  codex.rs  cors.rs  db.rs  github.rs  main.rs  models.rs  orchestrator.rs  runtime.rs  wiki.rs
backend/src/routes/: agents.rs  conversations.rs  cron_jobs.rs  events.rs  github_routes.rs  health.rs  mod.rs  onboarding.rs  runs.rs  search.rs  settings.rs  stats.rs  wiki_routes.rs
deploy/systemd/: agent_adda.service
frontend/: astro.config.mjs  package.json  tsconfig.json
frontend/src/components/app/: MissionControl.tsx  OpsDeskPage.tsx  RunBuilderPage.tsx  Sidebar.tsx  StatsPage.tsx  WikiPage.tsx  WindowChrome.tsx  types.ts
frontend/src/components/onboarding/: OnboardingModal.tsx
frontend/src/components/settings/: SettingsPanel.astro
frontend/src/components/shell/: CommandPalette.astro
frontend/src/components/stats/: StatsSummaryPanel.tsx
frontend/src/components/wiki/: WikiEditorSplit.tsx  WikiInspector.tsx  (+7 more)
frontend/src/layouts/: BaseLayout.astro
frontend/src/pages/: index.astro  ops.astro  run-builder.astro  stats.astro  wiki.astro
frontend/src/styles/: global.css
frontend/tests/: app-smoke.spec.ts
frontend/tests/fixtures/: fast-codex.sh
scripts/: agent_adda.sh
(+6 files in other folders)
